# micro-wav

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  README.md  idf_component.yml  library.json
.github/workflows/: ci.yml  publish.yml  release-drafter.yml
cmake/: esp-idf.cmake  host.cmake  sources.cmake
include/micro_wav/: wav_decoder.h  wav_header_parser.h
script/: clang-tidy.sh
src/: wav_decoder.cpp  wav_header_parser.cpp
tests/: test_wav_decoder.cpp  test_wav_parser.cpp  wav_test_data.h  write_test_wavs.cpp
